templates/ha_3_nic_same_zone/new-pip-migration-method/ha_3_nic_same_zone-pip-migration.template
---
Description: "Creates a HA pair with two instance of Citrix BYOL ADC with 3 ENIs 
associated to 3 VPC subnets (Management, Client, Server) on primary and 1 ENI 
for Management in secondary in the same availability zone."

Parameters:
  pCitrixADCImageID:
    Type: String
    Default: ""
    Description: >-
      "AMI ID of Citrix ADC (13.0.41.x+) to be provisioned. 
      If left empty, "Citrix ADC VPX - Customer Licensed Version 13.0-52.24
      (https://aws.amazon.com/marketplace/pp/B00AA01BOE)" is provisioned by default"
  pSSHCidrIp:
    Type: String
    MinLength: 9
    MaxLength: 18
    Description: "The IP address range that can SSH to the EC2 instance (port: 22)."
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x.
  pHTTPCidrIp:
    Default: 0.0.0.0/0
    Type: String
    MinLength: 9
    MaxLength: 18
    Description: "The IP address range that can HTTP to the EC2 instance (port: 80)."
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x.
  pHTTPSCidrIp:
    Default: 0.0.0.0/0
    Type: String
    MinLength: 9
    MaxLength: 18
    Description: "The IP address range that can HTTPS to the EC2 instance (port: 443)."
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x.
  pVpcId:
    Type: AWS::EC2::VPC::Id
    Description: VPC ID of your existing Virtual Private Cloud (VPC)
  pManagementSubnet:
    Type: AWS::EC2::Subnet::Id
    Description:
      SubnetId of an existing subnet in your Virtual Private Cloud (VPC)
      dedicated for management IP
  pClientSubnet:
    Type: AWS::EC2::Subnet::Id
    Description:
      SubnetId of an existing subnet in your Virtual Private Cloud (VPC)
      dedicated for Client side
  pServerSubnet:
    Type: AWS::EC2::Subnet::Id
    Description:
      SubnetId of an existing subnet in your Virtual Private Cloud (VPC)
      dedicated for Server side.
  pInstanceType:
    Default: m4.xlarge
    ConstraintDescription: Must be a valid EC2 instance type.
    Type: String
    Description: Type of Citrix ADC instance
    AllowedValues:
      - m4.xlarge
      - m4.2xlarge
      - m4.4xlarge
      - m4.10xlarge
      - m3.large
      - m3.xlarge
      - m3.2xlarge
      - c4.large
      - c4.xlarge
      - c4.2xlarge
      - c4.4xlarge
      - c4.8xlarge
  pKeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
    Type: AWS::EC2::KeyPair::KeyName
  pTenancyType:
    Default: default
    Type: String
    Description: Tenancy Model
    AllowedValues:
      - default
      - dedicated
  pPublishCloudwatchMetrics:
    Default: "Yes"
    Type: String
    AllowedValues:
      - "Yes"
      - "No"
    Description:
      Enter "Yes" to enable publishing of VPX metrics to Cloudwatch, or
      "No" to disable publishing.

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: Citrix ADC Image
        Parameters:
          - pCitrixADCImageID
      - Label:
          default: Virtual Private Network Configuration
        Parameters:
          - pVpcId
          - pSSHCidrIp
          - pHTTPCidrIp
          - pHTTPSCidrIp
      - Label:
          default: Network Interface Configuration
        Parameters:
          - pManagementSubnet
          - pClientSubnet
          - pServerSubnet

      - Label:
          default: Instance Configuration
        Parameters:
          - pKeyName
          - pInstanceType
          - pTenancyType
          - pPublishCloudwatchMetrics

    ParameterLabels:
      pCitrixADCImageID:
        default: Citrix ADC AMI ID

      pVpcId:
        default: VPC ID*
      pSSHCidrIp:
        default: Remote SSH CIDR IP*
      pHTTPCidrIp:
        default: Remote HTTP CIDR IP*
      pHTTPSCidrIp:
        default: Remote HTTPS CIDR IP*
      pManagementSubnet:
        default: Management Subnetwork*
      pClientSubnet:
        default: Client Subnetwork*
      pServerSubnet:
        default: Server Subnetwork*
      pKeyName:
        default: Key Pair*
      pInstanceType:
        default: Instance Type*
      pTenancyType:
        default: Tenancy Model*
      pPublishCloudwatchMetrics:
        default: Enable publishing custom metrics to cloudwatch?*

AWSTemplateFormatVersion: 2010-09-09

Outputs:
  DummyIPs:
    Description: DO NOT use these IPs
    Value: !Join
      - ", "
      - - !GetAtt rPriClientENI.PrimaryPrivateIpAddress
        - !GetAtt rPriServerENI.PrimaryPrivateIpAddress
        - !GetAtt rSecClientENI.PrimaryPrivateIpAddress
        - !GetAtt rSecServerENI.PrimaryPrivateIpAddress
  PrimaryPublicNSIP:
    Description: Primary CitrixADC EIP associated with Management
    Value: !Ref rPriEipNsip
  PrimaryADCInstanceID:
    Description: Primary Citrix ADC instance ID
    Value: !Ref rPriVPXInstance
  PrimaryPrivateVIPs:
    Description: Primary Client side Private VIPs
    Value: !Join
      - ", "
      - !GetAtt rPriClientENI.SecondaryPrivateIpAddresses
  PrimaryPrivateSNIPs:
    Description: Primary Server side Private SNIPs
    Value: !Join
      - ", "
      - !GetAtt rPriServerENI.SecondaryPrivateIpAddresses

  SecondaryPublicNSIP:
    Description: Secondary CitrixADC EIP associated with Management
    Value: !Ref rEipSecNsip
  SecondaryADCInstanceID:
    Description: Primary Citrix ADC instance ID
    Value: !Ref rSecVPXInstance

Conditions:
  cUseCitrixADCImageID: !Not
    - !Equals
      - !Ref pCitrixADCImageID
      - ""

Resources:
  rSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription:
        Enable SSH access via port 22, HTTP with port 80 and HTTPS
        with port 443
      VpcId: !Ref pVpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref pSSHCidrIp
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref pHTTPCidrIp
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref pHTTPSCidrIp
  rInboundRule:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 0
      ToPort: 65535
      SourceSecurityGroupId: !GetAtt rSecurityGroup.GroupId
      GroupId: !GetAtt rSecurityGroup.GroupId
  rCitrixNodesInstanceRole:
    Type: AWS::IAM::Role
    Properties:
      Path: "/"
      Policies:
        - PolicyName: Citrixnode
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Action:
                  - ec2:DescribeInstances
                  - ec2:DescribeNetworkInterfaces
                  - ec2:DetachNetworkInterface
                  - ec2:AttachNetworkInterface
                  - ec2:UnassignPrivateIpAddresses
                  - ec2:AssignPrivateIpAddresses
                  - ec2:StartInstances
                  - ec2:StopInstances
                  - ec2:RebootInstances
                  - "autoscaling:*"
                  - "sns:*"
                  - "sqs:*"
                  - "iam:SimulatePrincipalPolicy"
                  - "iam:GetRole"
                Resource: "*"
                Effect: Allow
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Action:
              - sts:AssumeRole
            Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
  rCitrixNodesProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
        - !Ref rCitrixNodesInstanceRole

  rPriNsipENI:
    Type: AWS::EC2::NetworkInterface
    Properties:
      SubnetId: !Ref pManagementSubnet
      GroupSet:
        - !Ref rSecurityGroup
      Description: ENI connected to Primary Management Subnet
      PrivateIpAddress: !Ref AWS::NoValue
  rPriClientENI:
    Type: AWS::EC2::NetworkInterface
    Properties:
      SubnetId: !Ref pClientSubnet
      GroupSet:
        - !Ref rSecurityGroup
      Description: ENI connected to Primary Client Subnet
      PrivateIpAddress: !Ref AWS::NoValue
      SecondaryPrivateIpAddressCount: 1 # This secondary IP migrates after failover
  rPriServerENI:
    Type: AWS::EC2::NetworkInterface
    Properties:
      SubnetId: !Ref pServerSubnet
      GroupSet:
        - !Ref rSecurityGroup
      Description: ENI connected to Primary Server Subnet
      PrivateIpAddress: !Ref AWS::NoValue
      SecondaryPrivateIpAddressCount: 1 # This secondary IP migrates after failover
  rPriEipNsip:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  rAssociateEipNsip:
    Type: AWS::EC2::EIPAssociation
    Properties:
      NetworkInterfaceId: !Ref rPriNsipENI
      AllocationId: !GetAtt rPriEipNsip.AllocationId
  rPriEipClientIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  rAssociateEipClientIP:
    Type: AWS::EC2::EIPAssociation
    Properties:
      NetworkInterfaceId: !Ref rPriClientENI
      PrivateIpAddress: !Select
        - 0
        - !GetAtt rPriClientENI.SecondaryPrivateIpAddresses # Associate EIP-VIP to first Secondary IP of Client ENI
      AllocationId: !GetAtt rPriEipClientIP.AllocationId

  rPriVPXInstance:
    Type: AWS::EC2::Instance
    Properties:
      Tags:
        - Key: Name
          Value: Primary-CitrixADC
      UserData:
        Fn::Base64:
          Fn::Join:
            - "\n"
            - - Fn::Join:
                  - ""
                  - - HAPeerIP=
                    - !GetAtt rSecNsipENI.PrimaryPrivateIpAddress
              - Fn::Join:
                  - ""
                  - - PublishCloudwatchMetrics=
                    - !Ref pPublishCloudwatchMetrics
              - !Ref rMyWaitHandle
      ImageId: !If
        - cUseCitrixADCImageID
        - !Ref pCitrixADCImageID
        - !FindInMap
          - AWSAMIRegionMap
          - !Ref AWS::Region
          - CITRIXADC
      KeyName: !Ref pKeyName
      Tenancy: !Ref pTenancyType
      IamInstanceProfile: !Ref rCitrixNodesProfile
      InstanceType: !Ref pInstanceType
      NetworkInterfaces:
        - DeviceIndex: "0"
          NetworkInterfaceId: !Ref rPriNsipENI
        - DeviceIndex: "1"
          NetworkInterfaceId: !Ref rPriClientENI
        - DeviceIndex: "2"
          NetworkInterfaceId: !Ref rPriServerENI

  rMyWaitHandle:
    Type: AWS::CloudFormation::WaitConditionHandle
    Properties: {}
  myWaitCondition:
    Type: AWS::CloudFormation::WaitCondition
    DependsOn: rPriVPXInstance
    Properties:
      Count: 0
      Handle: !Ref rMyWaitHandle
      Timeout: "60"

  rSecNsipENI:
    Type: AWS::EC2::NetworkInterface
    Properties:
      SubnetId: !Ref pManagementSubnet
      GroupSet:
        - !Ref rSecurityGroup
      Description: ENI connected to Secondary Management Subnet
      PrivateIpAddress: !Ref AWS::NoValue
  rSecClientENI:
    Type: AWS::EC2::NetworkInterface
    Properties:
      SubnetId: !Ref pClientSubnet
      GroupSet:
        - !Ref rSecurityGroup
      Description: ENI connected to Secondary Client Subnet
      PrivateIpAddress: !Ref AWS::NoValue
  rSecServerENI:
    Type: AWS::EC2::NetworkInterface
    Properties:
      SubnetId: !Ref pServerSubnet
      GroupSet:
        - !Ref rSecurityGroup
      Description: ENI connected to Secondary Server Subnet
      PrivateIpAddress: !Ref AWS::NoValue
  rEipSecNsip:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  rAssociateEipSecNsip:
    Type: AWS::EC2::EIPAssociation
    Properties:
      NetworkInterfaceId: !Ref rSecNsipENI
      AllocationId: !GetAtt rEipSecNsip.AllocationId

  rSecVPXInstance:
    DependsOn: myWaitCondition
    Type: AWS::EC2::Instance
    Properties:
      Tags:
        - Key: Name
          Value: Secondary-CitrixADC
      UserData:
        Fn::Base64:
          Fn::Join:
            - "\n"
            - - Fn::Join:
                  - ""
                  - - HAPeerIP=
                    - !GetAtt rPriNsipENI.PrimaryPrivateIpAddress
              - Fn::Join:
                  - ""
                  - - HAPeerInstanceId=
                    - !Ref rPriVPXInstance
              - Fn::Join:
                  - ""
                  - - PublishCloudwatchMetrics=
                    - !Ref pPublishCloudwatchMetrics
              - !Ref rMyWaitHandle
      ImageId: !If
        - cUseCitrixADCImageID
        - !Ref pCitrixADCImageID
        - !FindInMap
          - AWSAMIRegionMap
          - !Ref AWS::Region
          - CITRIXADC
      KeyName: !Ref pKeyName
      Tenancy: !Ref pTenancyType
      IamInstanceProfile: !Ref rCitrixNodesProfile
      InstanceType: !Ref pInstanceType
      NetworkInterfaces:
        - DeviceIndex: "0"
          NetworkInterfaceId: !Ref rSecNsipENI
        - DeviceIndex: "1"
          NetworkInterfaceId: !Ref rSecClientENI
        - DeviceIndex: "2"
          NetworkInterfaceId: !Ref rSecServerENI

Mappings:
  AWSAMIRegionMap:
    AMI:
      CITRIXADC: Citrix NetScaler and CloudBridge Connector 13.0-52.24-64-63425ded-82f0-4b54-8cdd-6ec8b94bd4f8-ami-05e241fd9b61abb3a.4
    us-gov-west-1:
      CITRIXADC: ami-00d2e361
    us-gov-east-1:
      CITRIXADC: ami-21f11d50
    us-east-2: # US East (Ohio)
      CITRIXADC: ami-0e8e26c508fa94732
    us-east-1: # US East (N. Virginia)
      CITRIXADC: ami-0bb96d1f8f79db909
    us-west-1: # US West (N. California)
      CITRIXADC: ami-0707f52c208d83427
    us-west-2: # US West (Oregon)
      CITRIXADC: ami-0503d15aed657c87d
    ap-east-1: # Asia Pacific (Hong Kong)
      CITRIXADC: ami-0b44e0d299d3b3a33
    ap-south-1: # Asia Pacific (Mumbai)
      CITRIXADC: ami-027978a22dc893058
    ap-northeast-2: # Asia Pacific (Seoul)
      CITRIXADC: ami-0ad520c016e96f260
    ap-southeast-1: # Asia Pacific (Singapore)
      CITRIXADC: ami-0316840d86abe4e5e
    ap-southeast-2: # Asia Pacific (Sydney)
      CITRIXADC: ami-02098e6dfe08d9299
    ap-northeast-1: # Asia Pacific (Tokyo)
      CITRIXADC: ami-0a5d628c2e1ea45e9
    ca-central-1: # Canada (Central)
      CITRIXADC: ami-02cbae7662e592d24
    eu-central-1: # Europe (Frankfurt)
      CITRIXADC: ami-05d81856537a0cfc2
    eu-west-1: # Europe (Ireland)
      CITRIXADC: ami-023da45cff4446484
    eu-west-2: # Europe (London)
      CITRIXADC: ami-037b51b95111f4231
    eu-west-3: # Europe (Paris)
      CITRIXADC: ami-0bd4c025bd6afab4a
    eu-north-1: # Europe (Stockholm)
      CITRIXADC: ami-01672d9e4fd60f85d
    sa-east-1: # South America (São Paulo)
      CITRIXADC: ami-0c66fc6fff94c64b9
